--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ClikXo - Performance Digital Marketing Agency</title>
-    <meta name="description" content="ClikXo is a performance digital marketing agency specializing in SEO, social media, content marketing, and digital strategy." />
-    <meta name="author" content="ClikXo" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
-    <meta property="og:title" content="ClikXo - Performance Digital Marketing Agency" />
-    <meta property="og:description" content="Leading digital marketing agency specializing in performance-driven strategies" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>ClikXo</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
