--- a/index.html
+++ b/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ClikXo</title>
+    <title>ClikXo Digital Marketing Agency | Best Web Development & Design Services</title>
+    <meta name="description" content="ClikXo is a leading performance digital marketing agency specializing in web development, app development, graphics design, and digital marketing solutions. Transform your business with our expert team." />
+    <meta name="keywords" content="digital marketing agency, web development, app development, graphics design, SEO, Dubai, UAE, performance marketing, ClikXo" />
+    <meta name="author" content="ClikXo Digital Marketing Agency" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
+    <!-- Apple Touch Icon for iOS devices -->
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://clikxo.com/" />
+
+    <!-- Open Graph meta tags for social media sharing -->
+    <meta property="og:title" content="ClikXo Digital Marketing Agency | Best Web Development & Design Services" />
+    <meta property="og:description" content="Leading performance digital marketing agency in Dubai, UAE. Expert web development, app development, graphics design, and digital marketing solutions." />
+    <meta property="og:image" content="https://clikxo.com/og-image.jpg" />
+    <meta property="og:url" content="https://clikxo.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="ClikXo" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ClikXo Digital Marketing Agency" />
+    <meta name="twitter:description" content="Leading performance digital marketing agency in Dubai, UAE" />
+    <meta name="twitter:image" content="https://clikxo.com/og-image.jpg" />
+
+    <!-- Additional SEO meta tags -->
+    <meta name="theme-color" content="#0066CC" />
+    <meta name="msapplication-TileColor" content="#0066CC" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
