--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="language" content="English" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.svg" />
 
     <!-- Apple Touch Icon for iOS devices -->
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://clikxo.com/" />
