feat: Update ClikXo Studio branding and logo improvements
- Updated navbar and footer logos to display 'ClikXo Studio' instead of 'ClikXo'
- Increased logo font sizes for better prominence (text-3xl and lg:text-4xl)
- Enhanced logo styling with font-black, drop-shadow-sm for visual impact
- Modified favicon to modern geometric design with gradient and digital elements
- Updated About section badge to 'About ClikXo Studio' for consistency
- Improved overall brand consistency across all components

--- a/index.html
+++ b/index.html
@@ -2,45 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <title>ClikXo Digital Marketing Agency | Best Web Development & Design Services</title>
-    <meta name="description" content="ClikXo is a leading performance digital marketing agency specializing in web development, app development, graphics design, and digital marketing solutions. Transform your business with our expert team." />
-    <meta name="keywords" content="digital marketing agency, web development, app development, graphics design, SEO, Dubai, UAE, performance marketing, ClikXo" />
-    <meta name="author" content="ClikXo Digital Marketing Agency" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Primary SEO Meta Tags -->
+    <title>ClikXo Studio | Web Development, Graphics Design & Digital Marketing | Dubai, UAE</title>
+    <meta name="title" content="ClikXo Studio | Web Development, Graphics Design & Digital Marketing | Dubai, UAE" />
+    <meta name="description" content="ClikXo Studio offers professional Web Development, Graphics Design, and Digital Marketing services in Dubai, UAE. Transform your business with our creative and tech solutions." />
+    <meta name="keywords" content="ClikXo Studio, Web Development Dubai, Graphics Design Dubai, Digital Marketing Dubai, Digital Agency Dubai, Web App Development" />
+    <meta name="author" content="ClikXo Studio" />
     <meta name="robots" content="index, follow" />
-    <meta name="language" content="English" />
+    <meta name="theme-color" content="#1e40af" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" href="/favicon.svg" />
+    <!-- Favicon & Apple Touch Icons -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32'%3E%3Cdefs%3E%3ClinearGradient id='grad1' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%231e40af;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%233b82f6;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='4' y='4' width='24' height='24' rx='4' fill='url(%23grad1)'/%3E%3Ccircle cx='16' cy='16' r='8' fill='white' opacity='0.9'/%3E%3Cpath d='M12 14h-2v2h2v-2zm4 0h-2v2h2v-2zm4-4h-2v6h2v-6z' fill='url(%23grad1)'/%3E%3C/svg%3E" />
+    <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='180' height='180'%3E%3Cdefs%3E%3ClinearGradient id='grad1' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%231e40af;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%233b82f6;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='4' y='4' width='24' height='24' rx='4' fill='url(%23grad1)'/%3E%3Ccircle cx='16' cy='16' r='8' fill='white' opacity='0.9'/%3E%3Cpath d='M12 14h-2v2h2v-2zm4 0h-2v2h2v-2zm4-4h-2v6h2v-6z' fill='url(%23grad1)'/%3E%3C/svg%3E" />
 
-    <!-- Apple Touch Icon for iOS devices -->
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:title" content="ClikXo Studio | Web Development, Graphics Design & Digital Marketing">
+    <meta property="og:description" content="Professional Web Development, Graphics Design, and Digital Marketing services in Dubai, UAE.">
+    <meta property="og:image" content="https://clikxo.com/og-image.jpg">
+    <meta property="og:url" content="https://clikxo.com">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="ClikXo Studio">
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://clikxo.com/" />
-    
-    <!-- Sitemap -->
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
-
-    <!-- Open Graph meta tags for social media sharing -->
-    <meta property="og:title" content="ClikXo Digital Marketing Agency | Best Web Development & Design Services" />
-    <meta property="og:description" content="Leading performance digital marketing agency in Dubai, UAE. Expert web development, app development, graphics design, and digital marketing solutions." />
-    <meta property="og:image" content="https://clikxo.com/og-image.jpg" />
-    <meta property="og:url" content="https://clikxo.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="ClikXo" />
-
-    <!-- Twitter Card meta tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ClikXo Digital Marketing Agency" />
-    <meta name="twitter:description" content="Leading performance digital marketing agency in Dubai, UAE" />
-    <meta name="twitter:image" content="https://clikxo.com/og-image.jpg" />
-
-    <!-- Additional SEO meta tags -->
-    <meta name="theme-color" content="#0066CC" />
-    <meta name="msapplication-TileColor" content="#0066CC" />
-    <link rel="manifest" href="/manifest.json" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ClikXo Studio">
+    <meta name="twitter:description" content="Web Development, Graphics Design & Digital Marketing services in Dubai, UAE.">
+    <meta name="twitter:image" content="https://clikxo.com/og-image.jpg">
     
     <!-- Performance Optimization -->
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
@@ -53,9 +43,113 @@
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/plusjakartasans/v8/LDIbaomQNQcsA88c7O9yZ4KMCoOg4IA6-91aHEjcWu86_qi9TsVc.woff2" as="font" type="font/woff2" crossorigin>
 
+    <!-- Resource Hints for Better Performance -->
+    <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="//fonts.googleapis.com" crossorigin>
+
+    <!-- Critical CSS for faster rendering -->
+    <style>
+      /* Critical styles for above the fold content */
+      .loading-spinner { text-align: center; padding: 20px; }
+      .loading-spinner::after { content: 'Loading ClikXo Studio...'; font-family: system-ui, sans-serif; }
+    </style>
+
     <!-- Google Fonts - Optimized for Performance -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Plus+Jakarta+Sans:wght@600;700;800;900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Plus+Jakarta+Sans:wght@600;700;800;900&display=swap" rel="stylesheet"></noscript>
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Plus+Jakarta+Sans:wght@600;700;800;900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Plus+Jakarta+Sans:wght@600;700;800;900&display=swap" rel="stylesheet"></noscript>
+
+    <!-- Structured Data for Search Engines -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "ClikXo Studio",
+      "url": "https://clikxo.com",
+      "logo": "https://clikxo.com/favicon.svg",
+      "description": "ClikXo Studio offers professional Web Development, Graphics Design, and Digital Marketing services in Dubai, UAE. Transform your business with our creative and tech solutions.",
+      "foundingDate": "2020",
+      "founders": ["ClikXo Team"],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+971-44318653",
+        "email": "info@clikxo.com",
+        "contactType": "Customer Service",
+        "areaServed": "AE",
+        "availableLanguage": "English"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Dubai",
+        "addressCountry": "AE"
+      },
+      "sameAs": [
+        "https://www.facebook.com/clikxostudio",
+        "https://www.instagram.com/clikxostudio",
+        "https://www.linkedin.com/company/clikxo-studio",
+        "https://twitter.com/clikxostudio"
+      ],
+      "services": [
+        {
+          "@type": "Service",
+          "name": "Web Development",
+          "description": "Custom web applications built with modern technologies and responsive design"
+        },
+        {
+          "@type": "Service",
+          "name": "Graphics Design",
+          "description": "Professional branding, logos, and marketing materials"
+        },
+        {
+          "@type": "Service",
+          "name": "Digital Marketing",
+          "description": "Data-driven marketing strategies for business growth online"
+        }
+      ],
+      "areaServed": {
+        "@type": "Place",
+        "name": "Dubai, UAE"
+      },
+      "priceRange": "$$"
+    }
+    </script>
+
+    <!-- Local Business Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "ClikXo Studio",
+      "image": "https://clikxo.com/og-image.jpg",
+      "description": "Leading digital marketing agency in Dubai, UAE specializing in web development, graphics design, and digital marketing services.",
+      "url": "https://clikxo.com",
+      "telephone": "+971-44318653",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Business Bay",
+        "addressLocality": "Dubai",
+        "addressCountry": "AE"
+      },
+      "openingHours": "Mo-Fr 09:00-18:00",
+      "priceRange": "$$",
+      "paymentAccepted": "Cash, Credit Card",
+      "currenciesAccepted": "AED, USD",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "150"
+      },
+      "serviceArea": {
+        "@type": "City",
+        "name": "Dubai",
+        "addressCountry": "AE"
+      },
+      "knowsAbout": ["Web Development", "Graphic Design", "Digital Marketing", "SEO", "UI/UX Design"]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
